# NIM-CMOS-Counter

./: CMakeLists.txt  README.MD  main.cpp
NIM-Counter/: NIM-Counter.h  NIM-Counter.ino
firmware/: CMakeLists.txt
firmware ArduinoIDE/NIM-Counter/: NIM-Counter.ino
firmware/src/: NIM-Counter.cpp  pinMapping.h
firmware/src/wire/: CMakeLists.txt
firmware/src/wire/utility/: twi.cpp
firmware/stk500boot-bootloader/: Makefile
include/: NIM-Counter.h
src/: CMakeLists.txt  NIM-Counter.cpp  main.cpp  pinMapping.h
stk500boot-bootloader/: Makefile
